# OOP

Project1/: CMakeLists.txt  Diff.hpp  main.cpp
Project2/: CMakeLists.txt  classArray3.hpp  main.cpp
Project3/: 5.txt  7.txt  CMakeLists.txt  Font.hpp  main.cpp
Project4/: CMakeLists.txt  main.cpp
Project5/: CMakeLists.txt  CollectionChanged.hpp  main.cpp
Project6/: CMakeLists.txt  Control.hpp  ControlFactory.hpp  OSForms.hpp  main.cpp
Project7/: CMakeLists.txt  Classes.hpp  main.cpp
Project8/: main.cpp
